--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,17 @@
         }
     },
     "scripts": {
+
+      
+            "post-install-cmd": [
+              "php artisan key:generate",
+              "php artisan config:cache",
+              "php artisan route:cache",
+              "php artisan view:cache"
+            ],
+         
+
+
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
